[修复] 修复地块更新公式错误

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ Sirenix.OdinInspector.CompatibilityLayer.csproj
 Sirenix.OdinInspector.CompatibilityLayer.Editor.csproj
 
 Sirenix.OdinInspector.Modules.UnityMathematics.csproj
+
+OasisProject3D.sln
