[调整] 调整昼夜变化

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Sirenix.OdinInspector.CompatibilityLayer.Editor.csproj
 Sirenix.OdinInspector.Modules.UnityMathematics.csproj
 
 OasisProject3D.sln
+
+Assembly-CSharp-Editor.csproj
