--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,4 @@
 [submodule "Assets/GameMain/Tools/MycroftToolkit"]
 	url = https://github.com/MycroftCooper/MycroftToolkit.git
+[submodule "Assets/QuickGameFramework"]
+	url = https://github.com/MycroftCooper/QuickGameFramework.git
