[功能] 建筑列表UI Icon显示成功

--- a/OasisProject3DFGUIProject/assets/GameMainUIPackage/package.xml
+++ b/OasisProject3DFGUIProject/assets/GameMainUIPackage/package.xml
@@ -22,9 +22,9 @@
     <component id="jlch1l" name="Unit_IconBtn1.xml" path="/Components/"/>
     <component id="jlch1o" name="Unit_IconBtn2.xml" path="/Components/"/>
     <component id="jlch1q" name="GreenRateBar.xml" path="/Components/"/>
-    <component id="jlch1r" name="BuildingTab.xml" path="/" exported="true"/>
+    <component id="jlch1r" name="BuildingTab.xml" path="/Components/" exported="true"/>
     <component id="jlch1s" name="BuildingTypeBtn.xml" path="/Components/"/>
-    <component id="jlch1t" name="BuildingIconCase.xml" path="/Components/"/>
+    <component id="jlch1t" name="BuildingIconCase.xml" path="/Components/" exported="true"/>
     <component id="jlch1u" name="Unit_SettingWindow.xml" path="/"/>
     <image id="jlch1v" name="hexagon _img(1).png" path="/Res/" scale="9grid" scale9grid="128,33,256,446"/>
     <component id="jlch1w" name="btn_2.xml" path="/Components/"/>
